trying jquery widget

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -98,3 +98,9 @@ body.narrow .chapter {
     top: 10px;
     left: 50px;
 }
+
+.ljq-tooltip-text {
+    background: #e5e5e5;
+    border: 1px solid #999;
+    border-radius: 1px;
+}
