trying jquery advanced animation

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -206,3 +206,20 @@ body.narrow .chapter {
 .selected .details {
     background-color: #060;
 }
+
+
+.member {
+    position: relative;
+    overflow: hidden;
+}
+.member div{
+    position: absolute;
+    left: -300px;
+    width: 250px;
+}
+
+.member p{
+    position: absolute;
+    left: -300px;
+    width: 250px;
+}
